# VulkanRaytracingProceduralGeometry

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  main.cxx  raytracing.cxx  raytracing.hxx  raytracingglsldefines.hxx  raytracingscenedefines.hxx  shader.cxx  shader.hxx  vulkanhelper.cxx  vulkanhelper.hxx
shader/: closest_hit_aabb_ext.rchit  closest_hit_aabb_ext.spv  closest_hit_aabb_nv.rchit  closest_hit_aabb_nv.spv  closest_hit_triangle.rchit  closest_hit_triangle.spv  closest_hit_triangle_ext.rchit  closest_hit_triangle_ext.spv  intersection_analytic.rint  intersection_analytic.spv  intersection_analytic_ext.rint  intersection_analytic_ext.spv  intersection_signed_distance.rint  intersection_signed_distance_ext.rint  intersection_signed_distance_ext.spv  intersection_signed_distance_nv.spv  intersection_volumetric.rint  intersection_volumetric.spv  intersection_volumetric_ext.rint  intersection_volumetric_ext.spv  miss_ext.rmiss  miss_ext.spv  miss_nv.rmiss  miss_nv.spv  miss_shadow_ray.rmiss  miss_shadow_ray_ext.rmiss  miss_shadow_ray_ext.spv  miss_shadow_ray_nv.spv  raygen.spv  raygen_ext.rgen  raygen_ext.spv  raygen_nv.rgen
